# witness-hk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: witopnet-app-ci.yml
ansible/: .ansible-lint.yml  README.md  op.env.example
ansible/inventories/pilot/: hosts.yml
ansible/inventories/pilot/group_vars/: witness_hosts.yml
ansible/playbooks/: witness-bootstrap.yml  witness-preflight.yml  witness-verify.yml
ansible/roles/witness_host/molecule/: README.md  requirements.txt
ansible/roles/witness_host/molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/roles/witness_host/tasks/: main.yml
ansible/roles/witness_host/templates/: circus-witness.ini.j2  circusd-witness.service.j2
api/: witopnet.app.aiding.rst  witopnet.app.cli.commands.marshal.rst  witopnet.app.cli.commands.marshal.start.rst  witopnet.app.cli.commands.marshal.submit.rst  witopnet.app.cli.commands.rst  witopnet.app.cli.rst  witopnet.app.cli.witopnet.rst  witopnet.app.indirecting.rst  witopnet.app.rst
deploy/ansible/: README.md  ansible.cfg  with-op-ssh-agent.sh
deploy/ansible/inventories/pilot/group_vars/: witness_hosts.yml
deploy/ansible/inventories/pilot/host_vars/: witness-do-01.yml
deploy/ansible/playbooks/: witness-verify.yml
deploy/ansible/roles/witness_host/handlers/: main.yml
deploy/ansible/roles/witness_host/tasks/: main.yml
deploy/ansible/roles/witness_host/templates/: circusd-witness.service.j2  run-keripy-witness.sh.j2
docs/: conf.py  developer-guide.rst  index.rst  requirements.txt
docs/api/: witopnet.core.basing.rst  witopnet.core.httping.rst  witopnet.core.oobing.rst  witopnet.core.rst  witopnet.core.witnessing.rst  witopnet.rst
scripts/: controller-multi.sh  controller.sh  env.sh  package.sh  witopnet-sample.sh
scripts/data/: witopnet.json
scripts/keri/cf/: controller.json  witopnet-config.json  witopnet.json
src/witopnet/: __init__.py
src/witopnet/app/: __init__.py  aiding.py  indirecting.py
src/witopnet/app/cli/: __init__.py  witopnet.py
src/witopnet/app/cli/commands/: __init__.py
src/witopnet/core/: __init__.py  basing.py  httping.py  oobing.py  witnessing.py
tests/: conftest.py
tests/witopnet/app/: test_aiding.py  test_httping.py  test_indirecting.py  test_witnessing.py
(+3 files in other folders)
