# pyproject.toml

[build-system]

requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Witopnet"
version = "0.0.1"
description = "Witness Operational Network"
readme = "README.md"
requires-python = ">=3.12.6"
license = { file = "LICENSE" }

authors = [
    { name = "Phillip Feairheller", email = "pfeairheller@gmail.com" },
    { name = "Ari Argoud", email = "ariargoud@gmail.com" },
]

keywords = ["keri-foundation", "cryptography", "KERI", "ACDC"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "hio==0.6.19",
    "keri==1.3.4",
    "multicommand>=1.0.0",
    "falcon>=3.1.0",
    "pyotp>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
witopnet = "witopnet.app.cli.witopnet:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
